--- a/style.css
+++ b/style.css
@@ -4,15 +4,30 @@
         }
         body {
             background: rgb(203,233,111);
-            background: linear-gradient(0deg, rgba(203,233,111,1) 0%, rgba(143,216,234,1) 90%, rgba(126,202,192,1) 100%);
+            background: linear-gradient(0deg, #afd1d2 0%, #d9eff0 90%, #a0cccd 100%);
         }
         div#content {
-            display: flex;
             flex-direction:row;
             align-items: normal;
             margin: 0 auto;
             padding: 70px 0;
             width: 800px;
+        }
+        .flexContent {
+            transition: 1s ease-out;
+            display:flex;
+        }
+        .texto {
+            text-align: left;
+            font-size: 9pt;
+            font-family: 'Roboto', sans-serif;
+            line-height: 1.5em;
+            padding: 0 30px 0 0;
+            color: #1b4946;
+        }
+        .warning {
+            font-style: italic;
+            color:#b80707;
         }
         #canvas {
             margin: 10px 10px 0 0;
@@ -30,10 +45,14 @@
             visibility: visible;
             opacity: 1;
         }
+        .displayNone {
+            display: none !important;
+        }
         textarea#title {
             font-size: 12pt;
-            padding: 10px;
+            padding: 0.5em 3.5em 0.5em 1em;
             margin-bottom:5px;
+            margin-top:10px;
             box-sizing: border-box;
             height:80px;
             font-family: 'Roboto', sans-serif;
@@ -50,7 +69,7 @@
         }
         input#link {
             font-size: 12pt;
-            padding: 10px;
+            padding: 0.5em 3.5em 0.5em 1em;
             margin-bottom:15px;
             box-sizing: border-box;
             border: 1px solid #1b4946;
@@ -69,19 +88,58 @@
             color: #1b4946;
             font-size: 2.098em;
         }
-        select.unidades {
-            height: 40px;
-            padding: 10px;
-            margin-bottom:15px;
-            font-size:12pt;
-            font-family: 'Roboto', sans-serif;
-            border: 1px solid #1b4946;
-            border-radius: 10px;
+        select {
             color: #677b72;
-        }
+            margin-bottom:5px;
+            background-color: white;
+            border: thin solid #1b4946;
+            border-radius: 10px;
+            display: inline-block;
+            font: inherit;
+            line-height: 1.5em;
+            padding: 0.5em 3.5em 0.5em 1em;   
+            -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            box-sizing: border-box;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+          }
+          select.unidades {
+            background-image:
+              linear-gradient(45deg, transparent 50%, #216952 50%),
+              linear-gradient(135deg, #216952 50%, transparent 50%),
+              linear-gradient(to right, #afd1d2, #afd1d2);
+            background-position:
+              calc(100% - 20px) calc(1em + 2px),
+              calc(100% - 15px) calc(1em + 2px),
+              100% 0;
+            background-size:
+              5px 5px,
+              5px 5px,
+              2.5em 2.5em;
+            background-repeat: no-repeat;
+          }
+          
+          select.unidades:focus {
+            background-image:
+              linear-gradient(45deg, #afd1d2 50%, transparent 50%),
+              linear-gradient(135deg, transparent 50%, #afd1d2 50%),
+              linear-gradient(to right, #577e95, #577e95);
+            background-position:
+              calc(100% - 15px) 1em,
+              calc(100% - 20px) 1em,
+              100% 0;
+            background-size:
+              5px 5px,
+              5px 5px,
+              2.5em 2.5em;
+            background-repeat: no-repeat;
+            border-color: grey;
+            outline: 0;
+          }
         textarea#textBody {
             font-size: 12pt;
-            padding: 10px;
+            padding: 0.5em 3.5em 0.5em 1em;
             margin-bottom:5px;
             height: 130px;
             font-family: 'Roboto', sans-serif;
@@ -92,7 +150,7 @@
         button#generate {
             border-radius:30px;
             padding:10px 20px;
-            background-color:#439e6e;
+            background-color:#1a9b72;
             border:1px solid #1d6c26;
             text-shadow:0px 1px 0px #224c1c;
             color:#ffffff;
@@ -100,7 +158,9 @@
             margin-bottom:10px;
         }
         button#generate:hover {
-            background-color:#1a9b72;
+            background-color:#4462a1;
+            transition: .5s ease;
+            -webkit-transition: .5s ease;
         }
         a#downloadLnk {
             cursor: pointer;
@@ -112,4 +172,18 @@
         div.download {
             text-align: right;
             color: #1b4946;
+        }
+        @media screen and (max-width: 820px) {
+            div#content, #canvas {
+                width: 90% !important;
+            }
+            div#formCard {
+                margin-right: 0 !important;
+            }
+            #canvas {
+                margin: 20px auto !important;
+            }
+            .flexContent {
+                display: block !important;
+            }
         }
