--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
         body {
             background: rgb(203,233,111);
             background: linear-gradient(0deg, #afd1d2 0%, #d9eff0 90%, #a0cccd 100%);
+            width: 100%;
+            height: 100%;
+            margin:0 auto;
         }
         div#content {
             flex-direction:row;
@@ -173,8 +176,8 @@
             text-align: right;
             color: #1b4946;
         }
-        @media screen and (max-width: 820px) {
-            div#content, #canvas {
+        @media only screen and (max-width: 820px) {
+            div#content {
                 width: 90% !important;
             }
             div#formCard {
@@ -182,8 +185,14 @@
             }
             #canvas {
                 margin: 20px auto !important;
+                height: 100% !important;
+                width: 100% !important;
             }
             .flexContent {
                 display: block !important;
+            }
+            .texto {
+                font-size: 10pt !important;
+                padding:0 !important;
             }
         }
